--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -9,5 +9,9 @@
     { "name": "Bicycle", "quantity": 2, "owner": "john@foo.com", "condition": "poor" },
     { "name": "Banana", "quantity": 2, "owner": "admin@foo.com", "condition": "good" },
     { "name": "Boogie Board", "quantity": 2, "owner": "admin@foo.com", "condition": "excellent" }
+  ],
+
+  "defaultEvent": [
+    { "eventHolder": "Fit-yondner", "location": "http://fityonder.meteorapp.com/#/", "time": "Anytime", "image": "https://github.com/Fit-Yonder/Fit-Yonder.github.io/raw/master/images/FitYonderLogo.png", "Description": "Find Workouts and fitness related events near you", "owner": "admin@foo.com" }
   ]
 }
