--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -1,28 +1,78 @@
 {
   "defaultAccounts": [
-    { "email": "admin@foo.com", "password": "changeme", "role": "admin" },
-    { "email": "john@foo.com", "password": "changeme" }
+    {
+      "email": "admin@foo.com",
+      "password": "changeme",
+      "role": "admin"
+    },
+    {
+      "email": "john@foo.com",
+      "password": "changeme"
+    }
   ],
-
   "defaultProfiles": [
-    { "email": "admin@foo.com", "password": "changeme", "role": "admin", "image": "http://arntd.org/wp-content/uploads/2015/03/obinna-ekwunife-2-400x400.jpg" },
-    { "email": "john@foo.com", "password": "changeme" }
+    {
+      "owner": "admin@foo.com",
+      "image": "http://arntd.org/wp-content/uploads/2015/03/obinna-ekwunife-2-400x400.jpg"
+    }
   ],
-
   "defaultData": [
-    { "name": "Basket", "quantity": 3, "owner": "john@foo.com", "condition": "excellent" },
-    { "name": "Bicycle", "quantity": 2, "owner": "john@foo.com", "condition": "poor" },
-    { "name": "Banana", "quantity": 2, "owner": "admin@foo.com", "condition": "good" },
-    { "name": "Boogie Board", "quantity": 2, "owner": "admin@foo.com", "condition": "excellent" }
+    {
+      "name": "Basket",
+      "quantity": 3,
+      "owner": "john@foo.com",
+      "condition": "excellent"
+    },
+    {
+      "name": "Bicycle",
+      "quantity": 2,
+      "owner": "john@foo.com",
+      "condition": "poor"
+    },
+    {
+      "name": "Banana",
+      "quantity": 2,
+      "owner": "admin@foo.com",
+      "condition": "good"
+    },
+    {
+      "name": "Boogie Board",
+      "quantity": 2,
+      "owner": "admin@foo.com",
+      "condition": "excellent"
+    }
   ],
-
   "defaultEvent": [
-    { "eventHolder": "Fit-yondner", "time": "Anytime", "location": "http://fityonder.meteorapp.com/#/", "image": "https://github.com/Fit-Yonder/Fit-Yonder.github.io/raw/master/images/FitYonderLogo.png", "description": "Find Workouts and fitness related events near you", "owner": "admin@foo.com" }
+    {
+      "eventHolder": "Fit-yondner",
+      "time": "Anytime",
+      "location": "http://fityonder.meteorapp.com/#/",
+      "image": "https://github.com/Fit-Yonder/Fit-Yonder.github.io/raw/master/images/FitYonderLogo.png",
+      "description": "Find Workouts and fitness related events near you",
+      "owner": "admin@foo.com"
+    }
   ],
-
   "defaultWorkouts": [
-  { "name": "Mason Twists", "image": "https://workoutlabs.com/wp-content/uploads/watermarked/Weighted_Twist_F_WorkoutLabs.png", "description": "a type of exercise that is used to work the abdominal muscles by performing a twisting motion on the abdomen. The exercise is believed by those who practice it to build explosiveness in the upper torso, which may help in sports such as tennis, swimming, baseball, track & field, hockey, golf, lacrosse, or boxing.", "category": "abs", "owner": "admin@foo.com"},
-  { "name": "Wall Sits", "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/WallsitSideview.png/220px-WallsitSideview.png", "description": "A wall sit is an exercise done to strengthen the quadriceps muscles. It is characterized by the two right angles formed by the body, one at the hips and one at the knees. The person wall sitting places their back against a wall with their feet shoulder width apart and a little ways out from the wall. Then, keeping their back against the wall, they lower their hips until their knees form right angles. This is a very intense work out for the quadriceps muscles. It can be very painful to hold this position for extended periods of time. Wall sits are used as a primary strengthening exercise in many sports requiring strong quadriceps like fencing, ice hockey, sailing (mostly small boat racing), skiing and track and field. This exercise is also used as a disciplinary activity in the armed forces. It takes up little space, and can be administered easily in classroom settings to misbehaving soldiers-in-training.", "category": "legs", "owner": "admin@foo.com" },
-  { "name": "Push-Up", "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Push_up_%28PSF%29.png/220px-Push_up_%28PSF%29.png", "description": "push-up (or press-up) is a common calisthenics exercise performed in a prone position by raising and lowering the body using the arms. Push-ups exercise the pectoral muscles, triceps, and anterior deltoids, with ancillary benefits to the rest of the deltoids, serratus anterior, coracobrachialis and the midsection as a whole. Push-ups are a basic exercise used in civilian athletic training or physical education and commonly in military physical training. They are also a common form of punishment used in the military, school sport, or in some martial arts disciplines.", "category": "full-body", "owner": "admin@foo.com" }
+    {
+      "name": "Mason Twists",
+      "image": "https://workoutlabs.com/wp-content/uploads/watermarked/Weighted_Twist_F_WorkoutLabs.png",
+      "description": "a type of exercise that is used to work the abdominal muscles by performing a twisting motion on the abdomen. The exercise is believed by those who practice it to build explosiveness in the upper torso, which may help in sports such as tennis, swimming, baseball, track & field, hockey, golf, lacrosse, or boxing.",
+      "category": "abs",
+      "owner": "admin@foo.com"
+    },
+    {
+      "name": "Wall Sits",
+      "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/WallsitSideview.png/220px-WallsitSideview.png",
+      "description": "A wall sit is an exercise done to strengthen the quadriceps muscles. It is characterized by the two right angles formed by the body, one at the hips and one at the knees. The person wall sitting places their back against a wall with their feet shoulder width apart and a little ways out from the wall. Then, keeping their back against the wall, they lower their hips until their knees form right angles. This is a very intense work out for the quadriceps muscles. It can be very painful to hold this position for extended periods of time. Wall sits are used as a primary strengthening exercise in many sports requiring strong quadriceps like fencing, ice hockey, sailing (mostly small boat racing), skiing and track and field. This exercise is also used as a disciplinary activity in the armed forces. It takes up little space, and can be administered easily in classroom settings to misbehaving soldiers-in-training.",
+      "category": "legs",
+      "owner": "admin@foo.com"
+    },
+    {
+      "name": "Push-Up",
+      "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Push_up_%28PSF%29.png/220px-Push_up_%28PSF%29.png",
+      "description": "push-up (or press-up) is a common calisthenics exercise performed in a prone position by raising and lowering the body using the arms. Push-ups exercise the pectoral muscles, triceps, and anterior deltoids, with ancillary benefits to the rest of the deltoids, serratus anterior, coracobrachialis and the midsection as a whole. Push-ups are a basic exercise used in civilian athletic training or physical education and commonly in military physical training. They are also a common form of punishment used in the military, school sport, or in some martial arts disciplines.",
+      "category": "full-body",
+      "owner": "admin@foo.com"
+    }
   ]
 }
