--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -14,6 +14,10 @@
     {
       "owner": "admin@foo.com",
       "image": "http://arntd.org/wp-content/uploads/2015/03/obinna-ekwunife-2-400x400.jpg"
+    },
+    {
+      "owner": "john@foo.com",
+      "image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3mwQwhbvshkibife6ggHHOBXILUL1qAD2hHUFuHhoR9Zj6hTx9A"
     }
   ],
   "defaultData": [
