mostly finished, I need to improve the event card

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -58,6 +58,7 @@
   ],
   "defaultEvent": [
     {
+      "name": "Fit-yonder",
       "eventHolder": "Fit-yondner",
       "time": "Anytime",
       "location": "http://fityonder.meteorapp.com/#/",
